# bio-koopman

./: .gitignore  README.md  bump_simulator.py  multi_model.py  naive_model.py  naive_model_cplx.py  place_grid_dmd_scratch.py  pyproject.toml  setup.py  simple_placesim_1d.py  test_multi_model.py  test_naive_model.py  test_naive_model_cplx.py  training.py
log/: .gitignore  log_20211116_real_valued_model_works.ipynb  log_20220126_small_multi_controller.ipynb  log_20220127_larger_multi_controller.ipynb
neurodmd/: bump_simulator.py  multi_model.py  naive_model_cplx.py  utils.py
sandbox/: multi_grid_dmd_scratch.ipynb  place_grid_dmd_scratch.ipynb  place_grid_sm_scratch.ipynb
src/neurodmd/: _version.py  bump_simulator.py  multi_model.py  sm_model.py  training.py
test/: test_multi_model.py  test_naive_model.py  test_naive_model_cplx.py  test_sm_model.py
