[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodmd"
dynamic = ["version"]
description = "Grid cells and transfer operators"
readme = "README.md"
authors = [ { name = "Tiberiu Tesileanu", email = "ttesileanu@gmail.com" } ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]
keywords = ["control", "biological model", "dynamical system", "research"]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "matplotlib",
    "seaborn",
    "tqdm",
    "pydove",
    "pytest",
    "ipykernel",
    "jupyter",
    "jupytext",
]
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/ttesileanu/bio-koopman-private"

[tool.setuptools_scm]
write_to = "src/neurodmd/_version.py"
